fix: minor changes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,9 +15,6 @@
 </head>
 
 <body>
-    <div style="display: flex; justify-content: center; width: 100vw;">
-        <p style="position: absolute; color: red; top: 0; font-size: 18px;">THIS PORTFOLIO IS NOT UP TO DATE</p>
-    </div>
     <% if(success && success.length) { %>
         <div class="alert alert-primary alert-dismissible fade show col-4 offset-4 z-index-5 position-fixed mt-2"
             role="alert">
@@ -50,11 +47,9 @@
                             a Passionate</div>
                         <span id="element" class="purple big-title"></span>
                         <div class="button">
-                            <button class="btn front-btn"><a
-                                    href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:cb158c1a-625e-43c5-9ed7-cbb69e42ee93"
-                                    class="btnhref">Download CV</a></button>
-                            <button class="btn front-btn margin-l-10"> <a
-                                    href="https://github.com/Fardeen26?tab=repositories" class="btnhref">Explore
+                            <button class="btn front-btn"><a href="#" class="btnhref">Download CV</a></button>
+                            <button class="btn front-btn margin-l-10"> <a href="https://github.com/Fardeen26"
+                                    class="btnhref">Explore
                                     GitHub</a></button>
                         </div>
 
@@ -78,43 +73,58 @@
                                     <div class="card-body">
                                         <h5 class="card-title about-card-title">My Journey</h5>
                                         <p class="card-text mt-3" id="about-card-text">
-                                            Hy I am Fardeen Mansuri, a <b>second-year BCA student</b> at Maa Bharti PG
-                                            College in Kota, embodies a unique journey into the world of software
-                                            engineering. Having achieved an impressive 83% in my first year, I is not
-                                            only excelling academically but I also a pioneer in my family, being the
-                                            first to venture into the realm of software engineering.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sequi
+                                            voluptatem odio vel nam. Enim, rem tempora ullam quisquam inventore non
+                                            iusto amet eius earum quam ab explicabo atque aperiam nesciunt labore
+                                            laudantium temporibus. Magni, odit? Ducimus neque doloribus repellat!
                                         </p>
 
                                         <p class="card-text" id="about-card-text">
-                                            Hailing from a small town, My passion for technology is evident through my
-                                            endeavors in <b> web development</b>. I have delved into the intricacies of
-                                            the <b>MERN stack</b>, demonstrating a keen ability to craft responsive
-                                            layouts and breathe life into digital landscapes. Beyond the academic
-                                            sphere, I have accumulated <b>one year of hands-on experience</b> working
-                                            with web development technologies, adding a practical edge to my theoretical
-                                            knowledge.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi molestiae
+                                            soluta non sit est, voluptatibus sed earum, velit aliquid necessitatibus
+                                            odit! Consequuntur illo nemo numquam voluptatibus error exercitationem
+                                            corrupti iusto perspiciatis non ipsam excepturi esse ex, dolores dolor
+                                            facere ipsa deleniti blanditiis placeat eligendi. Maiores harum aut tempore!
+                                            Tempora, vitae sit! Eveniet est explicabo quod tenetur at porro dolore
+                                            inventore.
                                         </p>
                                         <p class="card-text" id="about-card-text">
-                                            Simultaneously, I am sharpening my problem-solving skills with a focus on
+                                            <!-- Simultaneously, I am sharpening my problem-solving skills with a focus on
                                             <b>data structures and algorithms</b>, utilizing the power of C++. This dual
                                             pursuit not only showcases my dedication to mastering the technical aspects
                                             of software engineering but also positions my strategically for the
-                                            challenges that lie ahead.
+                                            challenges that lie ahead. -->
+
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolor, omnis
+                                            delectus ab dignissimos et consequuntur vitae. Officia ratione eaque maxime
+                                            fuga totam voluptatibus nam saepe ad rerum officiis, quasi ipsum vel commodi
+                                            voluptatem dolore dolores? Eius expedita animi laborum?
                                         </p>
 
                                         <p class="card-text" id="about-card-text">
-                                            My journey extends beyond the screen. While I immersed in the world of
+                                            <!-- My journey extends beyond the screen. While I immersed in the world of
                                             coding, I always remains passionate about continuous learning. In my leisure
                                             time, i finds joy in the camaraderie of cricket, where strategy, teamwork,
-                                            and skill converge.</p>
+                                            and skill converge. -->
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium odio
+                                            voluptates asperiores cupiditate aliquid, in quas dolor rem quae quam. Eius
+                                            cum, delectus deserunt similique aspernatur accusamus dolores mollitia
+                                            ratione, id facere consequatur earum.
+                                        </p>
 
                                         <p class="card-text" id="about-card-text">
-                                            Looking forward, I aspiring to pursue an <b>MCA</b>, thereby furthering my
+                                            <!-- Looking forward, I aspiring to pursue an <b>MCA</b>, thereby furthering my
                                             education and expertise in the field. My journey is a tapestry woven with
                                             academic achievements, practical experience, a love for learning, and a
-                                            commitment to mastering the intricacies of software engineering.</p>
-                                        <a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:cb158c1a-625e-43c5-9ed7-cbb69e42ee93"
-                                            class="btn btn-primary">Download CV</a>
+                                            commitment to mastering the intricacies of software engineering. -->
+
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore
+                                            deserunt, laboriosam voluptas porro quia maiores quos minima explicabo
+                                            earum, incidunt itaque aspernatur, ipsam cumque soluta quas quae. Ratione
+                                            temporibus culpa unde repellat eos accusamus voluptatem, quas accusantium
+                                            cumque nam!
+                                        </p>
+                                        <a href="#" class="btn btn-primary">Download CV</a>
                                     </div>
                                 </div>
                             </div>
@@ -538,7 +548,7 @@
                                 <div class="grid-box">
                                     <i class="fa-solid fa-phone-volume"></i>
                                     <h3>Phone</h3>
-                                    <p>+91 6377692757</p>
+                                    <p>+91 01125532553</p>
                                 </div>
                                 <div class="grid-box">
                                     <i class="fa-solid fa-envelope"></i>
@@ -587,8 +597,7 @@
                             <div class="logo-5 logo-p link-border"><i class="fa-brands fa-linkedin fa-2x"></i></div>
                         </a>
 
-                        <a href="https://auth.geeksforgeeks.org/user/fardeenmanxtyn" target="_blank"
-                            class="padding-lft-40">
+                        <a href="#" target="_blank" class="padding-lft-40">
                             <div class="logo-2 logo-p link-border"><i class="fa-solid fa-code fa-2x"></i></div>
                         </a>
                         <a href="https://twitter.com/fardeen14693425" target="_blank" class="padding-lft-40">
@@ -599,7 +608,7 @@
                             <div class="logo-4 logo-p link-border"><i class="fa-brands fa-github fa-2x"></i></div>
                         </a>
 
-                        <a href="https://www.instagram.com/fardeen_mansuri26/" target="_blank" class="padding-lft-40">
+                        <a href="#" target="_blank" class="padding-lft-40">
                             <div class="logo-1 link-border"><i class="fa-brands fa-instagram fa-2x"></i></div>
                         </a>
                     </div>
